--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BloodHub"
         tools:targetApi="31">
+        <activity android:name=".RegistrationActivity"
+            android:exported="false"/>
+        <activity android:name=".HomeActivity"
+            android:exported="false"/>
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
