Changes done for Contribute Button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,19 @@
 
         <activity android:name=".RegistrationActivity"
             android:exported="false"/>
+        <activity android:name=".ContributeActivity"
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity android:name=".HomeActivity"
             android:exported="false"/>
         <activity
             android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PaymentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ContributionFormActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
