--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mountreach.bloodhub">
-<!--a-->
-
+    <!-- a -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <application
 
+    <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,22 +15,23 @@
         android:roundIcon="@drawable/bloodhub"
         android:supportsRtl="true"
         android:theme="@style/Theme.BloodHub"
-
-
         tools:targetApi="31">
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDXKrtmMVOvzYhO9YDMYIdILpIThd8WW3w" />
 
-        <activity android:name=".RegistrationActivity"
-            android:exported="false"/>
-        <activity android:name=".ContributeActivity"
+        <activity
+            android:name=".RegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ContributeActivity"
             android:exported="false"
             tools:ignore="Instantiatable" />
-        <activity android:name=".HomeActivity"
-            android:exported="false"
-            />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
